--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>Barney's Day Off</title></head>
 
-<body background="" bgcolor="#281800" text="#D8A248" link="#BB0000" vlink="#880000" alink="#FF0000" leftmargin="0" topmargin="0" margin="0">
+<body background="" bgcolor="#281800" text="#D8A248" link="#BB0000" vlink="#880000" alink="#FF0000" leftmargin="100" topmargin="0" margin="0">
 
 <table width="100%" height="100%" border="0" cellspacing="12">
 	<tr>
@@ -9,7 +9,7 @@
 			&nbsp;
 		</td>
 		<td valign="top">
-			<a href="index.html"><img height="31" width="100" border="0" src="logo.gif"></a>
+			<a href="index.html"><img height="600" width="200" border="0" src="logo.gif"></a>
 		</td>
 		<td width="15%">
 			&nbsp;
@@ -23,7 +23,9 @@
 			
 			<i>Barney's Day Off</i> is a multiplayer map for <i>HALF-LIFE</i>. It incorporates many techniques that stretch the GoldSource Engine to its limits.
 			<br><br>
-			Barney's Day Off is currently in an alpha testing stage. To launch the game, you must have the proprietary game <i>HALF-LIFE</i> and it's GoldSource technologies. Drag and drop the BSP file into the valve/maps directory in your <i>HALF-LIFE</i> Installation folder.
+			Barney's Day Off is currently in an alpha testing stage. To launch the game, you must have the proprietary game <i>HALF-LIFE</i> and it's GoldSource technologies. 
+			<br><br><br>
+			Drag and drop the BSP file into the valve/maps directory in your <i>HALF-LIFE</i> Installation folder.
 			<br><br>
 			
 			Latest Release: <a href="map01.bsp">Beta</a>
