--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			&nbsp;
 		</td>
 		<td valign="top">
-			<a href="index.html"><img height="600" width="200" border="0" src="logo.gif"></a>
+			<a href="index.html"><img width="300" height="100" border="0" src="logo.gif"></a>
 		</td>
 		<td width="15%">
 			&nbsp;
