--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,5 @@
 <html>
-<head><title>Barney's Day Off</title></head>
+<head><title>Barney's Day Off - developer blog</title></head>
 
 <body background="brny.gif" bgcolor="#281800" text="#D8A248" link="#BB0000" vlink="#880000" alink="#FF0000" leftmargin="100" topmargin="0" margin="0">
 
@@ -20,18 +20,14 @@
 	<tr>
 		<td valign="top">
 			<font face="verdana, trebuchet ms, arial, helvetica" size="4">
-			<b>homepage</b></font><br><br>
+			<b>blog</b></font><br><br>
 			<font face="verdana, trebuchet ms, arial, helvetica" size="2">
-			
-			<i>Barney's Day Off</i> is a multiplayer map for <i>HALF-LIFE</i>. It incorporates many techniques that stretch the GoldSource Engine to its limits.
-			<br><br>
-			Barney's Day Off is currently in an alpha testing stage. To launch the game, you must have the proprietary game <i>HALF-LIFE</i> and it's GoldSource technologies. 
-			<br><br><br>
-			Drag and drop the BSP file into the valve/maps directory in your <i>HALF-LIFE</i> Installation folder.
+			<a href="index.html">←  return to homepage</a>
+			Browse the <i>Barney's Day Off</i>'s mapper's blog.
 			<br><br>
 			
-			Latest Release: <a href="map01.bsp">Beta</a>
-			
+			Article 1: <a href="BLOG01.md">Progress!</a>
+			<br><br>
 		</td>
 		<td>
 		</td>
