--- a/blog.html
+++ b/blog.html
@@ -23,10 +23,11 @@
 			<b>blog</b></font><br><br>
 			<font face="verdana, trebuchet ms, arial, helvetica" size="2">
 			<a href="index.html">←  return to homepage</a>
+			<br><br>
 			Browse the <i>Barney's Day Off</i>'s mapper's blog.
 			<br><br>
 			
-			Article 1: <a href="BLOG01.md">Progress!</a>
+			Article 1: <a href="BLOG01">Progress!</a>
 			<br><br>
 		</td>
 		<td>
