Fix blog post images and bigify the download links

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
 			<br><br><br>
 			Drag and drop the BSP file into the valve/maps directory in your <i>HALF-LIFE</i> Installation folder.
 			<br><br>
-			
+			<font size="9">
 			Latest Release: <a href="map01.bsp">Beta</a>
-			
+			<font size="2">
+
 		</td>
 		<td>
 		</td>
