--- a/get.html
+++ b/get.html
@@ -11,7 +11,7 @@
 		<td valign="top">
 			<font face="verdana, trebuchet ms, arial, helvetica" size="4">
 			<a href="index.html"><img width="300" height="100" border="0" src="logo.gif"></a><br>
-			<a href="blog.html">blog</a> - <a href="get.html">downloads</a>
+			<a href="blog.html">blog</a> - <a href="get.html">downloads</a>	- <a href="demo.html">demo</a>
 		</td>
 		<td width="15%">
 			&nbsp;
